<resources>
    <string name="app_name">Popular Movies</string>
    <string name="title_activity_movie_detail">Detail</string>
    <string name="title_activity_main2">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="popular">Popular Ones</string>
    <string name="rating">Highest Rated</string>
    <string name="favorite">Favorite</string>
    <string name="plot">Plot</string>
    <string name="shows_poster_of_movie">Shows Poster of Movie</string>
    <string name="info">Information</string>
    <string name="loading">Loading Movie Data</string>
    <string name="trailer">Trailer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">Popular Movies</string>
    <string name="share">Share</string>
    <string name="review">Review</string>
    <string name="show_movie_poster">Show Movie Poster</string>
</resources>
